# podns_rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: dns.rs  lib.rs  main.rs  parser.rs  pronouns.rs
