[package]
name = "podns"
version = "0.1.0"
edition = "2024"
description = "A simple, RFC-compliant Pronouns over DNS resolver helper"
repository = "https://github.com/RedKinda/podns_rs/"
authors = ["RedKinda <red@kinda.red>"]
readme = "README.md"
license = "MIT"

[[bin]]
name = "podns"
path = "src/main.rs"
required-features = ["dns_resolve"]

[dependencies]
resolve = { version = "0.2.0", optional = true }


[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
], optional = true }

[features]
default = []
dns_resolve = ["resolve", "windows"]
